# cpp-guitar-tuner-library

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  make_wasm.sh
.github/workflows/: cmake-multi-platform.yml
acceptance-test-assets/a-audio-stream/: audio-stream-a-1.txt  audio-stream-a-10.txt  audio-stream-a-100.txt  audio-stream-a-101.txt  audio-stream-a-102.txt  audio-stream-a-103.txt  audio-stream-a-104.txt  audio-stream-a-105.txt  audio-stream-a-106.txt  audio-stream-a-107.txt  audio-stream-a-108.txt  audio-stream-a-109.txt  audio-stream-a-11.txt  audio-stream-a-110.txt  audio-stream-a-111.txt  audio-stream-a-112.txt  audio-stream-a-113.txt  audio-stream-a-114.txt  audio-stream-a-115.txt  audio-stream-a-116.txt  audio-stream-a-117.txt  audio-stream-a-118.txt  audio-stream-a-119.txt  audio-stream-a-12.txt  audio-stream-a-120.txt  audio-stream-a-121.txt  audio-stream-a-122.txt  audio-stream-a-123.txt  audio-stream-a-124.txt  audio-stream-a-125.txt  audio-stream-a-126.txt  audio-stream-a-127.txt  audio-stream-a-128.txt  audio-stream-a-129.txt  audio-stream-a-13.txt  audio-stream-a-130.txt  audio-stream-a-131.txt  audio-stream-a-132.txt  audio-stream-a-133.txt  audio-stream-a-134.txt  (+663 more)
acceptance-test-assets/b-audio-stream/: audio-stream-b-1.txt  audio-stream-b-10.txt  audio-stream-b-100.txt  audio-stream-b-101.txt  audio-stream-b-102.txt  audio-stream-b-103.txt  audio-stream-b-104.txt  audio-stream-b-105.txt  audio-stream-b-106.txt  audio-stream-b-107.txt  audio-stream-b-108.txt  audio-stream-b-109.txt  audio-stream-b-11.txt  audio-stream-b-110.txt  audio-stream-b-111.txt  audio-stream-b-112.txt  audio-stream-b-113.txt  audio-stream-b-114.txt  audio-stream-b-115.txt  audio-stream-b-116.txt  audio-stream-b-117.txt  audio-stream-b-118.txt  audio-stream-b-119.txt  audio-stream-b-12.txt  audio-stream-b-120.txt  audio-stream-b-121.txt  audio-stream-b-122.txt  audio-stream-b-123.txt  audio-stream-b-124.txt  audio-stream-b-125.txt  audio-stream-b-126.txt  audio-stream-b-127.txt  audio-stream-b-128.txt  audio-stream-b-129.txt  audio-stream-b-13.txt  audio-stream-b-130.txt  audio-stream-b-131.txt  audio-stream-b-132.txt  audio-stream-b-133.txt  audio-stream-b-134.txt  (+663 more)
acceptance-test-assets/d-audio-stream/: audio-stream-d-1.txt  audio-stream-d-10.txt  audio-stream-d-100.txt  audio-stream-d-101.txt  audio-stream-d-102.txt  audio-stream-d-103.txt  audio-stream-d-104.txt  audio-stream-d-105.txt  audio-stream-d-106.txt  audio-stream-d-107.txt  audio-stream-d-108.txt  audio-stream-d-109.txt  audio-stream-d-11.txt  audio-stream-d-110.txt  audio-stream-d-111.txt  audio-stream-d-112.txt  audio-stream-d-113.txt  audio-stream-d-114.txt  audio-stream-d-115.txt  audio-stream-d-116.txt  audio-stream-d-117.txt  audio-stream-d-118.txt  audio-stream-d-119.txt  audio-stream-d-12.txt  audio-stream-d-120.txt  audio-stream-d-121.txt  audio-stream-d-122.txt  audio-stream-d-123.txt  audio-stream-d-124.txt  audio-stream-d-125.txt  audio-stream-d-126.txt  audio-stream-d-127.txt  audio-stream-d-128.txt  audio-stream-d-129.txt  audio-stream-d-13.txt  audio-stream-d-130.txt  audio-stream-d-131.txt  audio-stream-d-132.txt  audio-stream-d-133.txt  audio-stream-d-134.txt  (+663 more)
acceptance-test-assets/e2-audio-stream/: audio-stream-e2-1.txt  audio-stream-e2-10.txt  audio-stream-e2-100.txt  audio-stream-e2-101.txt  audio-stream-e2-102.txt  audio-stream-e2-103.txt  audio-stream-e2-104.txt  audio-stream-e2-105.txt  audio-stream-e2-106.txt  audio-stream-e2-107.txt  audio-stream-e2-108.txt  audio-stream-e2-109.txt  audio-stream-e2-11.txt  audio-stream-e2-110.txt  audio-stream-e2-111.txt  audio-stream-e2-112.txt  audio-stream-e2-113.txt  audio-stream-e2-114.txt  audio-stream-e2-115.txt  audio-stream-e2-116.txt  audio-stream-e2-117.txt  audio-stream-e2-118.txt  audio-stream-e2-119.txt  audio-stream-e2-12.txt  audio-stream-e2-120.txt  audio-stream-e2-121.txt  audio-stream-e2-122.txt  audio-stream-e2-123.txt  audio-stream-e2-124.txt  audio-stream-e2-125.txt  audio-stream-e2-126.txt  audio-stream-e2-127.txt  audio-stream-e2-128.txt  audio-stream-e2-129.txt  audio-stream-e2-13.txt  audio-stream-e2-130.txt  audio-stream-e2-131.txt  audio-stream-e2-132.txt  audio-stream-e2-133.txt  audio-stream-e2-134.txt  (+663 more)
acceptance-test-assets/e4-audio-stream/: audio-stream-e4-1.txt  audio-stream-e4-10.txt  audio-stream-e4-100.txt  audio-stream-e4-101.txt  audio-stream-e4-102.txt  audio-stream-e4-103.txt  audio-stream-e4-104.txt  audio-stream-e4-105.txt  audio-stream-e4-106.txt  audio-stream-e4-107.txt  audio-stream-e4-108.txt  audio-stream-e4-109.txt  audio-stream-e4-11.txt  audio-stream-e4-110.txt  audio-stream-e4-111.txt  audio-stream-e4-112.txt  audio-stream-e4-113.txt  audio-stream-e4-114.txt  audio-stream-e4-115.txt  audio-stream-e4-116.txt  audio-stream-e4-117.txt  audio-stream-e4-118.txt  audio-stream-e4-119.txt  audio-stream-e4-12.txt  audio-stream-e4-120.txt  (+678 more)
tools/: build_libtuner.sh  clean_test_artifacts.sh  init_cmake.sh  run_acceptance_tests.sh  run_unit_tests.sh  view_mac_symbol_table.sh
tuner/: dsp.cpp  dsp.hpp  dsp.test.cpp  global.hpp  math.cpp  math.hpp  math.test.cpp  note.cpp  note.hpp  note.test.cpp  tuner.acceptance_test.cpp  tuner.cpp  tuner.hpp  vector.cpp  vector.hpp  vector.test.cpp  wa_tuner.cpp  wa_tuner.hpp
(+703 files in other folders)
